--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,10 @@
 /* Global rules */
 
-@import url('https://fonts.googleapis.com/css?family=Quicksand');
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300&display=swap');
 
 html {
-    background-color: lightgray;
-    font-family: 'Quicksand', sans-serif;
+    background-color: rgb(45, 202, 150);
+    font-family: 'Cormorant Garamond', serif;
     font-size: 0.95em;
     line-height: 1.5em;
 }
